--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -3,12 +3,11 @@ name: Deploy Website
 on:
   push:
     branches:
-      - main  # Change to your default branch (e.g., main or master)
+      - main  # Change to your default branch
 
 jobs:
   deploy:
     runs-on: ubuntu-latest
-
     permissions:
       contents: write
       pages: write
@@ -23,19 +22,23 @@ jobs:
       - name: Set up Node.js
         uses: actions/setup-node@v4
         with:
-          node-version: '20'  # Use Node.js 20 (or your preferred version)
+          node-version: '20'  # Use Node.js 20 or your preferred version
 
       - name: Install dependencies
         run: npm install
 
+      - name: Create meta directory
+        run: mkdir -p meta
+
       - name: Run Elocuent
         run: npx elocuent -d . -o meta/loc.csv --spaces 2
 
-      - name: Commit and Push LOC Data
+      - name: Commit and Push
         run: |
-          git config --local user.email "action@github.com"
-          git config --local user.name "GitHub Action"
-          git add meta/loc.csv
+          git config --global user.email "action@github.com"
+          git config --global user.name "GitHub Action"
+          git pull --rebase
+          git add -f meta/loc.csv
           git commit -m "Update code statistics" || echo "No changes to commit"
           git push
 
